--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dev": "ts-node potato.ts",
     "distribute": "ts-node distribute.ts",
     "distribute:build": "tsc && node dist/distribute.js",
+    "sign": "ts-node sign-agreement.ts",
+    "sign:build": "tsc && node dist/sign-agreement.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,8 +18,10 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "axios": "^1.11.0",
     "dotenv": "^17.2.1",
-    "ethers": "^6.15.0"
+    "ethers": "^6.15.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
